# AuthorAI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/authorai/: __init__.py  cli.py
tests/: test_cli.py  test_json.py
